--- a/contact.html
+++ b/contact.html
@@ -24,67 +24,8 @@
   <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/apple-touch-icon.png">
   <link rel="manifest" href="/assets/img/site.webmanifest">
 
-  <!-- Styles -->
+  <!-- Global Styles -->
   <link rel="stylesheet" href="/styles.css" />
-  <style>
-    .form-wrap {
-      max-width: 680px;
-      margin: 0 auto;
-    }
-
-    form.contact {
-      background: var(--panel);
-      border: 1px solid var(--border);
-      border-radius: 16px;
-      padding: 18px;
-      display: grid;
-      gap: 14px;
-      box-shadow: var(--shadow);
-    }
-
-    form.contact label {
-      display: grid;
-      gap: 6px;
-      font-size: 14px;
-      color: var(--muted);
-    }
-
-    form.contact input,
-    form.contact textarea {
-      width: 100%;
-      padding: 12px;
-      border-radius: 10px;
-      border: 1px solid var(--border);
-      background: #0f1726;
-      color: var(--ink);
-    }
-
-    .disclaimer-banner {
-      background: rgba(255,193,7,.12);
-      border: 1px solid #ffc107;
-      color: #ffc107;
-      font-size: .9rem;
-      line-height: 1.5;
-      padding: 10px 12px;
-      border-radius: 8px;
-    }
-
-    .consent {
-      display: flex;
-      align-items: flex-start;
-      gap: 10px;
-      font-size: 14px;
-      color: var(--muted);
-      margin-top: 4px;
-    }
-
-    nav ul.nav-links {
-      display: flex;
-      gap: 16px;
-      margin-left: auto;
-      align-items: center;
-    }
-  </style>
 
   <!-- Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-1FRFWG4X18"></script>
@@ -145,8 +86,7 @@
           </label>
 
           <div class="disclaimer-banner">
-            ⚠️ <strong>Reminder:</strong> Do not include regulated, classified, or highly sensitive corporate data.
-            You are responsible for complying with your organization’s policies.
+            ⚠️ <strong>Reminder:</strong> Do not include regulated, classified, or highly sensitive corporate data. You are responsible for complying with your organization’s policies.
           </div>
 
           <div class="consent">
