--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,3 @@
-<!-- CONTACT.HTML -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -40,7 +39,7 @@
 <body>
   <!-- Header -->
   <header class="site-header">
-    <div class="container" style="display:flex;align-items:center;justify-content:space-between">
+    <div class="container">
       <a href="/" class="brand-wrap" aria-label="System & Flow homepage">
         <img src="/assets/img/logo.png" alt="System & Flow logo" />
         <span class="brand">System & Flow</span>
@@ -49,7 +48,7 @@
         <ul class="nav-links">
           <li><a href="/">Home</a></li>
           <li><a href="/apps.html">Tools</a></li>
-          <li><a href="/contact.html" aria-current="page" class="button">Contact</a></li>
+          <li><a href="/contact.html" aria-current="page" class="button primary">Contact</a></li>
         </ul>
       </nav>
     </div>
@@ -73,17 +72,14 @@
           action="https://formsubmit.co/75c13fb805073e5ae7a1f7ac8d63269d" 
           method="POST"
         >
-          <label for="name">Name
-            <input id="name" type="text" name="name" autocomplete="name" required />
-          </label>
+          <label for="name">Name</label>
+          <input id="name" type="text" name="name" autocomplete="name" required />
 
-          <label for="email">Email
-            <input id="email" type="email" name="email" autocomplete="email" required />
-          </label>
+          <label for="email">Email</label>
+          <input id="email" type="email" name="email" autocomplete="email" required />
 
-          <label for="message">Message
-            <textarea id="message" name="message" rows="5" placeholder="How can we help? (e.g., Transcript Analyzer, Status Report Generator, AI Prompt Pack)" required></textarea>
-          </label>
+          <label for="message">Message</label>
+          <textarea id="message" name="message" rows="5" placeholder="How can we help? (e.g., Transcript Analyzer, Status Report Generator, AI Prompt Pack)" required></textarea>
 
           <div class="disclaimer-banner">
             ⚠️ <strong>Reminder:</strong> Do not include regulated, classified, or highly sensitive corporate data. You are responsible for complying with your organization’s policies.
