--- a/privacy.html
+++ b/privacy.html
@@ -87,6 +87,9 @@
         <a href="mailto:info@systemnflow.com">info@systemnflow.com</a>.
       </p>
     </section>
+
+    <!-- Spacer before footer -->
+    <div style="height: 40px;"></div>
   </main>
 
   <!-- Injected Footer -->
